# GrowthOS

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/web/: eslint.config.js  next.config.ts  package.json  playwright.config.ts  postcss.config.mjs  tsconfig.json  vitest.config.ts
apps/worker/: package.json
deploy/railway/: ai-service.toml  api.toml  web.toml  worker.toml
docs/: implementation-roadmap.md
docs/adr/: 0001-monorepo-pnpm-turborepo.md  0002-api-nestjs-fastify.md  0003-prisma-postgresql.md  0004-auth-opaque-sessions.md  0005-bullmq-redis-worker.md  0006-separate-python-ai-service.md  0007-sse-for-progress.md  0008-object-storage-private-files.md  0009-tenant-isolation-strategy.md  0010-payment-provider-abstraction.md  0011-aws-production-target.md  0012-agency-client-relationship-cardinality.md  0013-openai-provider-and-retention.md  0014-application-field-encryption.md  0015-platform-support-access.md  README.md
docs/api/: phase-3-endpoints.md
docs/architecture/: advanced-audit-pipeline.md  data-flow.md  data-model.md  system-overview.md
scripts/: check-runtime.cjs  generate-production-secret.cjs  package-next-standalone.cjs  run-command.cjs
services/ai-service/: package.json  pyproject.toml
services/ai-service/src/growthos_ai/: __init__.py  config.py  logging.py  main.py  provider.py
services/ai-service/tests/: test_config.py  test_health.py  test_markers.py
(+164 files in other folders)
