[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "growthos-ai-service"
version = "0.1.0"
description = "Phase 1 FastAPI shell for zero2one Growth OS AI workflows"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.119.0",
  "pydantic==2.12.2",
  "pydantic-settings==2.11.0",
  "structlog==25.4.0",
  "uvicorn[standard]==0.37.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==1.18.2",
  "pytest==8.4.2",
  "ruff==0.14.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/growthos_ai"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: tests requiring a real external dependency",
  "e2e: end-to-end tests requiring a running service",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
